# zabbix-mcp

./: .env.example  .gitignore  CLAUDE_INTEGRATION.md  CONTRIBUTING.md  DEPLOYMENT.md  HOST_DEPLOYMENT.md  LICENSE  MEMORY.md  README.md  claude_desktop_config.json  pyproject.toml  requirements.txt  test_connection.py
src/zabbix_mcp/: __init__.py  client.py  config.py  server.py  tools.py  user_management.py
